team placeholder: check event, tournament, and series parameters for global settings; allow  to set `tournaments_coordinator_mail_to` and `tournaments_remarks_mail_to` on tournament or series basis

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -177,6 +177,8 @@ scope = [series]
 [tournaments_coordinator_mail_to]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
+scope[] = tournaments
+scope[] = website
 
 [tournaments_federation_path]
 description = "path to page which shows all participants of a federation"
@@ -240,6 +242,8 @@ default = "http://altdwz.schachbund.net/turniere/%d.html?code=%s"
 [tournaments_remarks_mail_to]
 description = "send mails with remarks to tournament registrations to this mail address"
 type = mail
+scope[] = website
+scope[] = tournaments
 
 [tournaments_request_address_data]
 description = "request to enter addresses of participants"
