merge: add access right `tournaments_merge`, to merge players and teams in tournaments

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -64,6 +64,10 @@ group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
+[tournaments_merge]
+description = "merge tournament data in case an import went wrong"
+group = admin
+
 [tournaments_pairings]
 description = "add and edit single or team parings"
 group = "read and write"
