spieler: change field definitions based on field name; add access rights `tournaments_players_change`, `tournaments_players_edit` instead of hardcoded groups; always show nation, FIDE ID, federation

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -79,6 +79,10 @@ group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
+[tournaments_players_change]
+description = "allow to change person in players list (e. g. if an import error occured)"
+group = admin
+
 [tournaments_players_duplicate]
 description = "show players who are participating in more than one tournament of the series"
 group = admin
@@ -86,6 +90,10 @@ page_placeholder_check = 1
 include_access[] = tournaments_players
 condition[] = series
 condition[] = tournament
+
+[tournaments_players_edit]
+description = "edit players list per tournament"
+group = read and write
 
 [tournaments_playercard]
 description = "player card for single tournaments"
