export PDF teilnehmerschilder: do not create cards for players that have a status with no_cards=1

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -205,11 +205,16 @@ description = "list of all tournaments registered on platform"
 type = path
 brick = "tables tournaments"
 
+[tournaments_no_cards]
+description = "participation status: if set, do not create player or place cards for these players"
+type = bool
+scope[] = categories
+
 [tournaments_pgn_paths]
 description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
 list = 1
 type = path
-scope = [tournaments]
+scope[] = tournaments
 
 [tournaments_players_compact_max]
 description = "maximum no. of players to show in compact list/standings"
