team/pdf: parse tournament_form_parameters for module parameters; add settings `tournaments_federation`, `tournaments_pdf_text_chair`, `tournaments_pdf_text_in_org` to read from categories or tournament settings instead of using hardcoded text

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -180,6 +180,12 @@ type = mail
 scope[] = tournaments
 scope[] = website
 
+[tournaments_federation]
+description = "show federation of players or teams in listings"
+type = bool
+scope[] = categories
+scope[] = tournaments
+
 [tournaments_federation_path]
 description = "path to page which shows all participants of a federation"
 type = path
@@ -208,6 +214,16 @@ brick = "tables tournaments"
 [tournaments_no_cards]
 description = "participation status: if set, do not create player or place cards for these players"
 type = bool
+scope[] = categories
+
+[tournaments_pdf_text_chair]
+description = "text block for PDFs: chair person"
+scope[] = tournaments
+scope[] = categories
+
+[tournaments_pdf_text_in_org]
+description = "text block for PDFs: in organisation"
+scope[] = tournaments
 scope[] = categories
 
 [tournaments_pgn_paths]
