settings: add `tournaments_members_only` instead of old undocumented category parameter for turnierform mitglied=1

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -211,6 +211,12 @@ description = "list of all tournaments registered on platform"
 type = path
 brick = "tables tournaments"
 
+[tournaments_members_only]
+description = "only allow members of confederation to participate (restrict to federation, club, depending on scope of tournament)"
+type = bool
+scope[] = tournaments
+scope[] = categories
+
 [tournaments_no_cards]
 description = "participation status: if set, do not create player or place cards for these players"
 type = bool
