--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -281,6 +281,18 @@ description = "path to player card for single tournaments"
 type = path
 brick = "request player *"
 
+[tournaments_type_single]
+description = "it is a single tournament"
+type = bool
+scope[] = tournaments
+scope[] = categories
+
+[tournaments_type_team]
+description = "it is a team tournament"
+type = bool
+scope[] = tournaments
+scope[] = categories
+
 [tournaments_standings_path]
 description = "path to standings per round per tournament"
 type = path
