tournaments_identifiers: rename table turniere_kennungen to tournaments_identifiers, field names, too

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -191,6 +191,11 @@ description = "path to page which shows all participants of a federation"
 type = path
 brick = "request federation *"
 
+[tournaments_identifier]
+description = "marker for identifiers that they can be used for tournaments"
+type = bool
+scope[] = categories
+
 [tournaments_job_games_path]
 description = "path for job that updates games"
 type = path
