file: add sendfile function for team registration PDFs; add access right `tournaments_team_pdfs`, rename folder from meldeboegen to teampdfs

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -150,6 +150,10 @@ condition_error = 403
 include_access = tournaments_team_application
 page_placeholder_check = 1
 
+[tournaments_team_pdfs]
+description = "download PDF team registration forms"
+group = admin
+
 [tournaments_teams]
 description = "add and edit teams of a tournament"
 group = "read and write"
