--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -211,12 +211,6 @@ description = "list of all tournaments registered on platform"
 type = path
 brick = "tables tournaments"
 
-[tournaments_members_only]
-description = "only allow members of confederation to participate (restrict to federation, club, depending on scope of tournament)"
-type = bool
-scope[] = tournaments
-scope[] = categories
-
 [tournaments_no_cards]
 description = "participation status: if set, do not create player or place cards for these players"
 type = bool
@@ -237,6 +231,15 @@ description = "path to a PGN file, either on the local server or remote as URL, 
 list = 1
 type = path
 scope[] = tournaments
+
+[tournaments_player_pool]
+description = "only allow members of confederation to participate (restrict to federation, club, depending on scope of tournament)"
+type = bool
+scope[] = tournaments
+scope[] = categories
+enum[] = confederation
+enum[] = federation
+enum[] = club
 
 [tournaments_players_compact_max]
 description = "maximum no. of players to show in compact list/standings"
