access: only show teams links if tournament was created, because of tournament form

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -157,7 +157,8 @@ group = admin
 [tournaments_teams]
 description = "add and edit teams of a tournament"
 group = "read and write"
-condition = team
+condition = tournaments_type_team
+condition = tournament_id
 condition_unless = series
 
 [tournaments_teams_foreign_key]
@@ -168,7 +169,7 @@ condition = tournament_id
 [tournaments_teams_registrations]
 description = "access registration data of team tournaments, including PDFs"
 group = admin
-condition[] = team
+condition[] = tournaments_type_team
 condition[] = teams
 condition_unless = series
 
