--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -174,6 +174,11 @@ description = "show archive of main tournament, too"
 type = bool
 scope = [series]
 
+[tournaments_contact_categories]
+description = "Contact types that can participate in this tournament"
+scope[] = categories
+list = 1
+
 [tournaments_coordinator_mail_to]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
