change access and setting keys `tournaments_team_application*` to `tournaments_team_registration*`, because the latter fits better

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ; 
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2022-2024 Gustaf Mossakowski
+; @copyright Copyright © 2022-2025 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -18,68 +18,68 @@
 ;
 
 [tournaments_federation]
-description = "show all participants of a federation"
+description = "Show all participants of a federation"
 group[] = public
 
 [tournaments_games]
-description = "edit single games, upload PGN files"
+description = "Edit single games, upload PGN files"
 group = "read and write"
 page_placeholder_check = 1
 include_access[] = tournaments_pairings
 
 [tournaments_job_games]
-description = "job that updates games"
+description = "Job that updates games"
 group[] = admin
 group[] = localhost
 
 [tournaments_job_standings]
-description = "job that updates standings"
+description = "Job that updates standings"
 group[] = admin
 group[] = localhost
 
 [tournaments_lineup_until_begin_of_round]
-description = "access and change lineup until beginning of round"
+description = "Access and change lineup until beginning of round"
 group = admin
 condition = tournament_id
 
 [tournaments_list]
-description = "show a list of all tournaments registered on platform"
+description = "Show a list of all tournaments registered on platform"
 group = admin
 
 [tournaments_liveresults]
-description = "enter live results during the tournament"
+description = "Enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
 condition[] = tournament
 condition[] = running_event
 
 [tournaments_manual_triggers]
-description = "allow to trigger some background operations manually if something is stuck"
+description = "Allow to trigger some background operations manually if something is stuck"
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
 [tournaments_merge]
-description = "merge tournament data in case an import went wrong"
+description = "Merge tournament data in case an import went wrong"
 group = admin
 
 [tournaments_pairings]
-description = "add and edit single or team parings"
+description = "Add and edit single or team parings"
 group = "read and write"
 page_placeholder_check = 1
 
 [tournaments_players]
-description = "edit player list per tournament"
+description = "Edit player list per tournament"
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
 [tournaments_players_change]
-description = "allow to change person in players list (e. g. if an import error occured)"
+description = "Allow to change person in players list (e. g. if an import error occured)"
 group = admin
 
 [tournaments_players_duplicate]
-description = "show players who are participating in more than one tournament of the series"
+description = "Show players who are participating in more than one tournament of the series"
 group = admin
 page_placeholder_check = 1
 include_access[] = tournaments_players
@@ -87,94 +87,94 @@ condition[] = series
 condition[] = tournament
 
 [tournaments_players_edit]
-description = "edit players list per tournament"
+description = "Edit players list per tournament"
 group = read and write
 
 [tournaments_playercard]
-description = "player card for single tournaments"
+description = "Player card for single tournaments"
 group = public
 
 [tournaments_playerimages]
-description = "show missing player images per tournament"
+description = "Show missing player images per tournament"
 group = admin
 page_placeholder_check = 1
 condition[] = series
 condition[] = includes_single_tournaments
 
 [tournaments_playermessages]
-description = "view, edit and print all player messages during a tournament"
+description = "View, edit and print all player messages during a tournament"
 group = admin
 page_placeholder_check = 1
 condition = playermessages
 
 [tournaments_rating_update]
-description = "allow update of all ratings before tournament begins"
+description = "Allow update of all ratings before tournament begins"
 group = admin
 page_placeholder_check = 1
 condition[] = tournament_id
 condition[] = future_or_running_event
 
 [tournaments_rounds]
-description = "add and edit tournaments rounds"
+description = "Add and edit tournaments rounds"
 group = "read and write"
 condition = tournament
 condition_unless = series
 page_placeholder_check = 1
 
 [tournaments_standings]
-description = "add and edit tournament standings"
+description = "Add and edit tournament standings"
 group = "read and write"
 page_placeholder_check = 1
 
 [tournaments_team]
-description = "team on public website"
+description = "Team on public website"
 group = public
 
-[tournaments_team_application]
-description = "application of a single team"
+[tournaments_team_registration]
+description = "Application of a single team"
 group = "read and write"
 page_placeholder_check = 1
 
-[tournaments_team_application_addresses]
-description = "application of a single team: edit addresses"
+[tournaments_team_registration_addresses]
+description = "Application of a single team: edit addresses"
 group = "read and write"
 condition = team_application_active
-include_access = tournaments_team_application
+include_access = tournaments_team_registration
 page_placeholder_check = 1
 
-[tournaments_team_application_uploads]
-description = "application of a single team: upload files"
+[tournaments_team_registration_uploads]
+description = "Application of a single team: upload files"
 group = "read and write"
 condition = team_application_complete
 condition_error = 403
-include_access = tournaments_team_application
+include_access = tournaments_team_registration
 page_placeholder_check = 1
 
 [tournaments_team_pdfs]
-description = "download PDF team registration forms"
+description = "Download PDF team registration forms"
 group = admin
 
 [tournaments_teams]
-description = "add and edit teams of a tournament"
+description = "Add and edit teams of a tournament"
 group = "read and write"
 condition = tournaments_type_team
 condition = tournament_id
 condition_unless = series
 
 [tournaments_teams_foreign_key]
-description = "change foreign key for team of an external tournament software"
+description = "Change foreign key for team of an external tournament software"
 group = admin
 condition = tournament_id
 
 [tournaments_teams_registrations]
-description = "access registration data of team tournaments, including PDFs"
+description = "Access registration data of team tournaments, including PDFs"
 group = admin
 condition[] = tournaments_type_team
 condition[] = teams
 condition_unless = series
 
 [tournaments_tournament_edit]
-description = "edit tournament details"
+description = "Edit tournament details"
 group = admin
 condition = tournament
 condition_unless = series
