--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2020-2024 Gustaf Mossakowski
+; @copyright Copyright © 2020-2025 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -18,65 +18,65 @@
 ;
 
 [aks]
-description = "ages for extra age groups (e. g. for open tournaments)"
+description = "Ages for extra age groups (e. g. for open tournaments)"
 type = int
 list = 1
 scope = [series]
 
 ["chess24_com[chatRooms][0]"]
-description = "chess24 JSON: chat room for tournament, first language (English)"
+description = "Chess24 JSON: chat room for tournament, first language (English)"
 scope = [tournaments]
 
 ["chess24_com[chatRooms][1]"]
-description = "chess24 JSON: chat room for tournament, further language (German)"
+description = "Chess24 JSON: chat room for tournament, further language (German)"
 scope = [tournaments]
 
 ["chess24_com[chatRooms][2]"]
-description = "chess24 JSON: chat room for tournament, further language (Spanish)"
+description = "Chess24 JSON: chat room for tournament, further language (Spanish)"
 scope = [tournaments]
 
 ["chess24_com[chatRooms][3]"]
-description = "chess24 JSON: chat room for tournament, further language (French)"
+description = "Chess24 JSON: chat room for tournament, further language (French)"
 scope = [tournaments]
 
 ["chess24com[logo_url]"]
-description = "chess24 JSON: URL for logo of own organisation at chess24.com"
+description = "Chess24 JSON: URL for logo of own organisation at chess24.com"
 type = url
 
 ["chess24_com[titles][de]"]
-description = "chess24 JSON: title of tournament (German)"
+description = "Chess24 JSON: title of tournament (German)"
 scope = [tournaments]
 
 ["chess24_com[titles][en]"]
-description = "chess24 JSON: title of tournament (English)"
+description = "Chess24 JSON: title of tournament (English)"
 scope = [tournaments]
 
 ["chess24_com[titles][es]"]
-description = "chess24 JSON: title of tournament (Spanish)"
+description = "Chess24 JSON: title of tournament (Spanish)"
 scope = [tournaments]
 
 ["chess24_com[titles][fr]"]
-description = "chess24 JSON: title of tournament (French)"
+description = "Chess24 JSON: title of tournament (French)"
 scope = [tournaments]
 
 ["chess24_com[descriptions][de]"]
-description = "chess24 JSON: description of tournament, HTML text (German)"
+description = "Chess24 JSON: description of tournament, HTML text (German)"
 scope = [tournaments]
 
 ["chess24_com[descriptions][en]"]
-description = "chess24 JSON: description of tournament, HTML text (English)"
+description = "Chess24 JSON: description of tournament, HTML text (English)"
 scope = [tournaments]
 
 ["chess24_com[descriptions][es]"]
-description = "chess24 JSON: description of tournament, HTML text (Spanish)"
+description = "Chess24 JSON: description of tournament, HTML text (Spanish)"
 scope = [tournaments]
 
 ["chess24_com[descriptions][fr]"]
-description = "chess24 JSON: description of tournament, HTML text (French)"
+description = "Chess24 JSON: description of tournament, HTML text (French)"
 scope = [tournaments]
 
 [color]
-description = "color for tournament on badges and player cards, CSS format"
+description = "Color for tournament on badges and player cards, CSS format"
 type = bool
 scope = [series]
 
@@ -85,13 +85,13 @@ description = "Time before the start of the round from which the PGN files (head
 type = "int"
 
 ["ftp_pgn[0]"]
-description = "destination FTP URL with username and password and up to two placeholders for tournament identifier (e. g. `2022-dem-u18`) where PGN files are uploaded to"
+description = "Destination FTP URL with username and password and up to two placeholders for tournament identifier (e. g. `2022-dem-u18`) where PGN files are uploaded to"
 
 ["ftp_other[0][dest]"]
-description = "destination FTP URL with username and password to where other files are uploaded"
+description = "Destination FTP URL with username and password to where other files are uploaded"
 
 ["ftp_other[0][source]"]
-description = "local source URL (hostname optional) of other files for upload to FTP destination"
+description = "Local source URL (hostname optional) of other files for upload to FTP destination"
 
 [home_team_first_board]
 description = "Colour of player at first board of home team (default black, or white)"
@@ -101,7 +101,7 @@ default = black
 scope = [website, tournaments]
 
 [lineup_before_round_mins]
-description = "time in minutes before a round starts until team organisers have to submit the line-up for the current round. (default: 0, negative values are possible)"
+description = "Time in minutes before a round starts until team organisers have to submit the line-up for the current round. (default: 0, negative values are possible)"
 type = int
 scope = [tournaments]
 
@@ -123,35 +123,35 @@ type = int
 scope = [website, tournaments]
 
 [live_pgn_offset_mins]
-description = "offset if PGN files are transferred with an incorrect timestamp"
+description = "Offset if PGN files are transferred with an incorrect timestamp"
 type = int
 scope = [website, tournaments]
 
 [pdf_group_line]
-description = "field name to use for group_line in PDF exports"
+description = "Field name to use for group_line in PDF exports"
 scope = [usergroups]
 
 [pgn_folder]
-description = "path to PGN files inside media folder which are imported to database"
+description = "Path to PGN files inside media folder which are imported to database"
 type = path
 default = "/pgn"
 
 [pgn_bulletin_file_template]
-description = "file name template for bulletin files inside series folder inside bulletin folder per tournament (just base name, without .pgn)"
+description = "File name template for bulletin files inside series folder inside bulletin folder per tournament (just base name, without .pgn)"
 scope[] = tournaments
 
 [pgn_bulletin_folder]
-description = "path to PGN files inside media folder from bulletin team"
+description = "Path to PGN files inside media folder from bulletin team"
 type = path
 default = "/pgn-bulletin"
 
 [pgn_live_folder]
-description = "path to live PGN files inside media folder"
+description = "Path to live PGN files inside media folder"
 type = path
 default = "/pgn-live"
 
 [pgn_queue_folder]
-description = "path to PGN queue inside media folder"
+description = "Path to PGN queue inside media folder"
 type = path
 default = "/pgn-queue"
 
@@ -165,12 +165,12 @@ description = "If you get a PGN file with errors or missing names etc., you can 
 scope = [website, tournaments]
 
 [playermessages]
-description = "allow to send messages to each player via a form (for single tournaments)"
+description = "Allow to send messages to each player via a form (for single tournaments)"
 type = bool
 scope = [series]
 
 [show_main_tournament_archive]
-description = "show archive of main tournament, too"
+description = "Show archive of main tournament, too"
 type = bool
 scope = [series]
 
@@ -186,59 +186,59 @@ scope[] = tournaments
 scope[] = website
 
 [tournaments_federation]
-description = "show federation of players or teams in listings"
+description = "Show federation of players or teams in listings"
 type = bool
 scope[] = categories
 scope[] = tournaments
 
 [tournaments_federation_path]
-description = "path to page which shows all participants of a federation"
+description = "Path to page which shows all participants of a federation"
 type = path
 brick = "request federation *"
 
 [tournaments_identifier]
-description = "marker for identifiers that they can be used for tournaments"
+description = "Marker for identifiers that they can be used for tournaments"
 type = bool
 scope[] = categories
 
 [tournaments_job_games_path]
-description = "path for job that updates games"
+description = "Path for job that updates games"
 type = path
 brick = "make games *"
 
 [tournaments_job_standings_path]
-description = "path for job that updates standings"
+description = "Path for job that updates standings"
 type = path
 brick = "make standings *"
 
 [tournaments_list_path]
-description = "list of all tournaments registered on platform"
+description = "List of all tournaments registered on platform"
 type = path
 brick = "tables tournaments"
 
 [tournaments_no_cards]
-description = "participation status: if set, do not create player or place cards for these players"
+description = "Participation status: if set, do not create player or place cards for these players"
 type = bool
 scope[] = categories
 
 [tournaments_pdf_text_chair]
-description = "text block for PDFs: chair person"
+description = "Text block for PDFs: chair person"
 scope[] = tournaments
 scope[] = categories
 
 [tournaments_pdf_text_in_org]
-description = "text block for PDFs: in organisation"
+description = "Text block for PDFs: in organisation"
 scope[] = tournaments
 scope[] = categories
 
 [tournaments_pgn_paths]
-description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
+description = "Path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
 list = 1
 type = path
 scope[] = tournaments
 
 [tournaments_player_pool]
-description = "only allow members of confederation to participate (restrict to federation, club, depending on scope of tournament)"
+description = "Only allow members of confederation to participate (restrict to federation, club, depending on scope of tournament)"
 type = bool
 scope[] = tournaments
 scope[] = categories
@@ -247,81 +247,81 @@ enum[] = federation
 enum[] = club
 
 [tournaments_players_compact_max]
-description = "maximum no. of players to show in compact list/standings"
+description = "Maximum no. of players to show in compact list/standings"
 type = int
 default = 20
 
 [tournaments_players_compact_max_tolerance]
-description = "tolerance factor for maximum no. of players in compact list (does not make sense to show 20 players but the 21st only on separate page)"
+description = "Tolerance factor for maximum no. of players in compact list (does not make sense to show 20 players but the 21st only on separate page)"
 type = number
 default = 1.25
 
 [tournaments_public_url]
-description = "public URL of a tournament"
+description = "Public URL of a tournament"
 type = url
 scope[] = internal
 default_from_module = 1
 
 ["tournaments_rating_link[fide]"]
-description = "link to ratings on website of World Chess Federation (FIDE)"
+description = "Link to ratings on website of World Chess Federation (FIDE)"
 default = "https://ratings.fide.com/tournament_information.phtml?event=%d"
 
 ["tournaments_rating_link[dwz]"]
-description = "link to ratings on website of German Chess Federation (DSB)"
+description = "Link to ratings on website of German Chess Federation (DSB)"
 default = "https://www.schachbund.de/turnier/%s.html"
 
 ["tournaments_rating_link[dwz_before_2011]"]
-description = "link to ratings on website of German Chess Federation (DSB) for tournaments before 2011"
+description = "Link to ratings on website of German Chess Federation (DSB) for tournaments before 2011"
 default = "http://altdwz.schachbund.net/turniere/%d.html?code=%s"
 
 [tournaments_remarks_mail_to]
-description = "send mails with remarks to tournament registrations to this mail address"
+description = "Send mails with remarks to tournament registrations to this mail address"
 type = mail
 scope[] = website
 scope[] = tournaments
 
 [tournaments_request_address_data]
-description = "request to enter addresses of participants"
+description = "Request to enter addresses of participants"
 type = bool
 
 [tournaments_playercard_path]
-description = "path to player card for single tournaments"
+description = "Path to player card for single tournaments"
 type = path
 brick = "request player *"
 
 [tournaments_type_single]
-description = "it is a single tournament"
+description = "It is a single tournament"
 type = bool
 scope[] = tournaments
 scope[] = categories
 
 [tournaments_type_team]
-description = "it is a team tournament"
+description = "It is a team tournament"
 type = bool
 scope[] = tournaments
 scope[] = categories
 
 [tournaments_standings_path]
-description = "path to standings per round per tournament"
+description = "Path to standings per round per tournament"
 type = path
 brick = "forms tabellenstaende *"
 
-[tournaments_team_application_path]
-description = "path to internal team application"
+[tournaments_team_registration_path]
+description = "Path to internal team registration"
 type = path
 brick = "request eventinternal *"
 
 [tournaments_team_league]
-description = "team tournament is a league, e. g. not played en bloc but every n weeks"
+description = "Team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
 scope = [tournaments]
 
 [tournaments_team_path]
-description = "path to team on public website"
+description = "Path to team on public website"
 type = path
 default = "/%s/"
 
 [tournaments_upload_pgn]
-description = "allow to upload PGN files"
+description = "Allow to upload PGN files"
 type = bool
 default = 1
