emptytournament: add make script to delete the games, pairings, standings, players and teams

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -17,6 +17,10 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
+[tournaments_empty]
+description = "Empty a tournament"
+group = admin
+
 [tournaments_federation]
 description = "Show all participants of a federation"
 group[] = public
