--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -216,6 +216,11 @@ description = "List of all tournaments registered on platform"
 type = path
 brick = "tables tournaments"
 
+[tournaments_liveresults_path]
+description = "Enter live results during the tournament"
+type = path
+brick = "make liveresults"
+
 [tournaments_no_cards]
 description = "Participation status: if set, do not create player or place cards for these players"
 type = bool
