live round: add function mf_tournaments_live_round() to get live round, based on timetable, played games and an offset defined in `tournaments_live_round_mins`, also supporting round robin tournaments where all rounds are fixed from the beginning; rename old function with this name to mf_tournaments_live_board(), which is better describing what the function does

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -185,6 +185,12 @@ type = mail
 scope[] = tournaments
 scope[] = website
 
+[tournaments_live_round_mins]
+description = "Minutes +/- start of round that a round is considered live"
+type = int
+default = -60
+scope[] = tournaments
+
 [tournaments_federation]
 description = "Show federation of players or teams in listings"
 type = bool
