clubs_to_federations(): add setting `tournaments_contact_without_federation`, will not look for federation if set for contact

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -232,6 +232,11 @@ description = "Participation status: if set, do not create player or place cards
 type = bool
 scope[] = categories
 
+[tournaments_contact_without_federation]
+description = "Contact is not part of a federation"
+type = bool
+scope[] = contacts
+
 [tournaments_pdf_text_chair]
 description = "Text block for PDFs: chair person"
 scope[] = tournaments
