settings: use standard way to write arrays with scope[] =, not scope = […, …]

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2020-2025 Gustaf Mossakowski
+; @copyright Copyright © 2020-2026 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -21,23 +21,23 @@
 description = "Ages for extra age groups (e. g. for open tournaments)"
 type = int
 list = 1
-scope = [series]
+scope[] = series
 
 ["chess24_com[chatRooms][0]"]
 description = "Chess24 JSON: chat room for tournament, first language (English)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[chatRooms][1]"]
 description = "Chess24 JSON: chat room for tournament, further language (German)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[chatRooms][2]"]
 description = "Chess24 JSON: chat room for tournament, further language (Spanish)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[chatRooms][3]"]
 description = "Chess24 JSON: chat room for tournament, further language (French)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24com[logo_url]"]
 description = "Chess24 JSON: URL for logo of own organisation at chess24.com"
@@ -45,40 +45,40 @@ type = url
 
 ["chess24_com[titles][de]"]
 description = "Chess24 JSON: title of tournament (German)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[titles][en]"]
 description = "Chess24 JSON: title of tournament (English)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[titles][es]"]
 description = "Chess24 JSON: title of tournament (Spanish)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[titles][fr]"]
 description = "Chess24 JSON: title of tournament (French)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[descriptions][de]"]
 description = "Chess24 JSON: description of tournament, HTML text (German)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[descriptions][en]"]
 description = "Chess24 JSON: description of tournament, HTML text (English)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[descriptions][es]"]
 description = "Chess24 JSON: description of tournament, HTML text (Spanish)"
-scope = [tournaments]
+scope[] = tournaments
 
 ["chess24_com[descriptions][fr]"]
 description = "Chess24 JSON: description of tournament, HTML text (French)"
-scope = [tournaments]
+scope[] = tournaments
 
 [color]
 description = "Color for tournament on badges and player cards, CSS format"
 type = bool
-scope = [series]
+scope[] = series
 
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
@@ -96,14 +96,16 @@ description = "Local source URL (hostname optional) of other files for upload to
 [home_team_first_board]
 description = "Colour of player at first board of home team (default black, or white)"
 type = select
-enum = [black, white]
+enum[] = black
+enum[] = white
 default = black
-scope = [website, tournaments]
+scope[] = website
+scope[] = tournaments
 
 [lineup_before_round_mins]
 description = "Time in minutes before a round starts until team organisers have to submit the line-up for the current round. (default: 0, negative values are possible)"
 type = int
-scope = [tournaments]
+scope[] = tournaments
 
 [live_cache_control_age]
 description = "Cache-Control: max-age value for live games (in seconds)"
@@ -120,16 +122,18 @@ type = int
 [live_pgn_delay_mins]
 description = "Delay in the publication of PGN files for live broadcasts"
 type = int
-scope = [website, tournaments]
+scope[] = website
+scope[] = tournaments
 
 [live_pgn_offset_mins]
 description = "Offset if PGN files are transferred with an incorrect timestamp"
 type = int
-scope = [website, tournaments]
+scope[] = website
+scope[] = tournaments
 
 [pdf_group_line]
 description = "Field name to use for group_line in PDF exports"
-scope = [usergroups]
+scope[] = usergroups
 
 [pgn_folder]
 description = "Path to PGN files inside media folder which are imported to database"
@@ -158,21 +162,22 @@ default = "/pgn-queue"
 [pgn_match_round_table_board]
 description = "Match Round, (Table, ) Board from PGN Round-tag if there are no matching names. (Important: do not use if PGNs from several tournaments are in one file!)"
 type = bool
-scope = [tournaments]
+scope[] = tournaments
 
 [pgn_preparation_function]
 description = "If you get a PGN file with errors or missing names etc., you can chose to use a function to prepare that PGN file"
-scope = [website, tournaments]
+scope[] = website
+scope[] = tournaments
 
 [playermessages]
 description = "Allow to send messages to each player via a form (for single tournaments)"
 type = bool
-scope = [series]
+scope[] = series
 
 [show_main_tournament_archive]
 description = "Show archive of main tournament, too"
 type = bool
-scope = [series]
+scope[] = series
 
 [tournaments_contact_categories]
 description = "Contact types that can participate in this tournament"
@@ -330,7 +335,7 @@ brick = "request eventinternal *"
 [tournaments_team_league]
 description = "Team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
-scope = [tournaments]
+scope[] = tournaments
 
 [tournaments_team_path]
 description = "Path to team on public website"
