settings: add `dem_spielerphotos_aus_mediendb`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -80,6 +80,11 @@ description = "Color for tournament on badges and player cards, CSS format"
 type = bool
 scope[] = series
 
+[dem_spielerphotos_aus_mediendb]
+description = "Year from which on the player photos are saved in mediadb"
+type = int
+default = 2014
+
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
 type = "int"
