settings: add `events_public_url`, move to events module later

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -85,6 +85,12 @@ description = "Year from which on the player photos are saved in mediadb"
 type = int
 default = 2014
 
+[events_public_url]
+description = "Public URL of an event"
+type = url
+scope[] = internal
+default_from_module = 1
+
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
 type = "int"
